Update breakpoints for Projects & Blog

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <h2>Projects</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -129,7 +129,7 @@
                                 <a href="http://www.greyadv.com/" target="_blank" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -142,7 +142,7 @@
                                 <a href="/marketing/google-adwords-exam-help" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -194,19 +194,19 @@
             <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="col-md-2 text-center">
+                    <div class="col-sm-2 text-center">
                         <br>
                         <p><i class="fa fa-flask fa-3x"></i>
                         </p>
                         <p>July 16, 2016</p>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/why-i-experiment-every-day">
                             <img class="img-portfolio img-responsive" src="img/why-i-experiment-every-day.jpeg" alt="">
                         </a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <h4>
                             <a href="/blog/2016/why-i-experiment-every-day">Why I Experiment Every Day</a>
                         </h4>
@@ -223,19 +223,19 @@
             <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="col-md-2 text-center">
+                    <div class="col-sm-2 text-center">
                         <br>
                         <p><i class="fa fa-edit fa-3x"></i>
                         </p>
                         <p>June 15, 2016</p>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/meta-blog-1">
                             <img class="img-portfolio img-responsive" src="img/meta-blog-1.jpg" alt="">
                         </a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <h4>
                             <a href="/blog/2016/meta-blog-1">Meta Blog #1</a>
                         </h4>
@@ -252,19 +252,19 @@
             <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="col-md-2 text-center">
+                    <div class="col-sm-2 text-center">
                         <br>
                         <p><i class="fa fa-paper-plane-o fa-3x"></i>
                         </p>
                         <p>February 7, 2016</p>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/i-am-a-procrastinator">
                             <img class="img-portfolio img-responsive" src="img/i-am-a-procrastinator.jpg" alt="">
                         </a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <h4>
                             <a href="/blog/2016/i-am-a-procrastinator">I Am A Procrastinator</a>
                         </h4>
@@ -280,19 +280,19 @@
             <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="col-md-2 text-center">
+                    <div class="col-sm-2 text-center">
                         <br>
                         <p><i class="fa fa-line-chart fa-3x"></i>
                         </p>
                         <p>January 21, 2016</p>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/no-marketing-budget">
                             <img class="img-portfolio img-responsive" src="img/no-marketing-budget.jpg" alt="">
                         </a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <h4>
                             <a href="/blog/2016/no-marketing-budget">No Marketing Budget</a>
                         </h4>
@@ -309,19 +309,19 @@
             <!-- Blog Post Row -->
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="col-md-2 text-center">
+                    <div class="col-sm-2 text-center">
                         <br>
                         <p><i class="fa fa-desktop fa-3x"></i>
                         </p>
                         <p>January 9, 2016</p>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-sm-4 text-center">
                         <br>
                         <a href="/blog/2016/8-reasons-you-need-a-website">
                             <img class="img-portfolio img-responsive" src="img/8-reasons-you-need-a-website.jpg" alt="">
                         </a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <h4>
                             <a href="/blog/2016/8-reasons-you-need-a-website">8 Reasons You Need A Website</a>
                         </h4>
