Updated AI and Mktg, added /docs

--- a/ai/artificial-intelligence.html
+++ b/ai/artificial-intelligence.html
@@ -76,21 +76,20 @@
     </nav>
 
     <!-- Body -->
-    <section id="body" class="about">
+    <section id="body" class="services bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Why Artificial Intelligence?</h2>
                     <hr class="small">
                     <span><img 
-                        class="img-circle"
-                        src="img/dudon-wai.jpg"
+                        src="../img/program-or-be-programmed.jpg"
                         height="250" 
                         width="250">
                         </span>
                     <h2 class="centered mb">Program or Be Programmed</h2>
                     <div class="col-lg-6 col-lg-offset-3">
-                        <p>Artificial intelligence is changing the way we work, play - and ultimately - live. That's why I'm studying artificial intellligence at <strong>Georgia Tech.</strong></p>
+                        <p>Artificial intelligence is changing the way we work, play - and ultimately - live. In his book, Douglas Rushkoff says "we are looking at a society increasingly dependent on machines, yet decreasingly capable of making or even using them effectively." Technology is moving fast, and only the ones that continue to learn are able to keep up, otherwise you're left behind. That's why I'm studying artificial intellligence at <strong>Georgia Tech.</strong> AI has the potential to make the lives of so many people better, and I want to join the mission to bring AI to the world.</p>
                     </div>
                 </div>
             </div>
@@ -105,30 +104,33 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="col-lg-4 text-center">
-                        <h4>PROJECT NAME</h4>
-                        <p class="text-muted">Course Name</p>
-                        <p>Brief description about the problem, conclusions and its practical applications.</p>
+                        <a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank"><h4>SUPERVISED LEARNING</h4></a>
+                        <p class="text-muted">CS7641: Machine Learning</p>
+                        <p>I used 5 supervised learning algorithms using explore two interesting problems: the accuracy of letter recognition, and the relationship between demographics and adult income in the US. <a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank">View Project</a></p>
                     </div>
                     <div class="col-lg-2 text-center">
-                        <span><img 
-                        class="img-circle"
-                        src="img/dudon-wai.jpg"
-                        height="150" 
-                        width="150">
+                        <span><a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank">
+                            <img 
+                                class="img-circle"
+                                src="../img/gt-omscs-cs7641-a1.png"
+                                height="150" 
+                                width="150"></a>
                         </span>
                     </div>
                     <div class="col-lg-2 text-center">
-                        <span><img 
-                        class="img-circle"
-                        src="img/dudon-wai.jpg"
-                        height="150" 
-                        width="150">
+                        <span><a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank">
+                            <img 
+                                class="img-circle"
+                                src="../img/gt-omscs-cs7641-a2.png"
+                                height="150" 
+                                width="150"></a>
                         </span>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4>PROJECT NAME</h4>
-                        <p class="text-muted">Course Name</p>
-                        <p>Brief description about the problem, conclusions and its practical applications.</p>
+                        <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank"><h4>RANDOM OPTIMIZATION</h4></a>
+                        <p class="text-muted">CS7641: Machine Learning</p>
+                        <p>Sometimes, the optimal solution of a problem requires computing every single possible combination. Random optimization aims to find <i>near-</i>optimal solutions with a fraction of the computational cost. <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank">View Project</a></p>
+
                     </div>
                 </div>
             </div>
