--- a/marketing/google-adwords-exam-help.html
+++ b/marketing/google-adwords-exam-help.html
@@ -81,10 +81,12 @@
                 <div class="col-lg-12 text-center">
                     <h2>What is Google AdWords?</h2>
                     <span><img 
-                        src="img/google-logo.jpg"
+                        src="../img/google-logo.jpg"
                         height="117" 
                         width="250">
                         </span>
+                </div>
+                <div class="col-lg-12 text-center">
                     <div class="col-lg-6 col-lg-offset-3">
                         <p>Google AdWords helps boost your website traffic by advertising your business right when your audience is already engaged -  searching for or browsing similar content.</p>
                         <p>While I provide marketing consultation, I also want encourage you to equip yourself with SEO (Search Engine Optimization) or SEM (Search Engine Marketing) so you can make the most of it. The best way to develop yourself as a SEO expert is to first be a practitioner, and then get the Google AdWords certificate. It's a 120-minute exam, so you'll want to know what you're doing before you start studying. When you do start to prepare for the exam, I've compiled a list of practice questions with answers for you to refer to. Enjoy and good luck!
@@ -1450,76 +1452,6 @@
         <!-- /.container -->
     </section>
 
-    <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Projects</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>GreyADV</strong>
-                                </h4>
-                                <p>A web development agency that turned to education to teach new startups how to MVP.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Marketing Firm</strong>
-                                </h4>
-                                <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Artificial Intelligence</strong>
-                                </h4>
-                                <p>Program or be programmed. My journey at Georgia Tech to become a technical programmer in AI.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Dota Stats</strong>
-                                </h4>
-                                <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
     <!-- Footer -->
     <footer>
         <div class="container">
