--- a/ai/artificial-intelligence.html
+++ b/ai/artificial-intelligence.html
@@ -112,7 +112,7 @@
                         <span><a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank">
                             <img 
                                 class="img-circle"
-                                src="../img/gt-omscs-cs7641-a1.png"
+                                src="../img/gt-omscs-cs7641-a1.jpg"
                                 height="150" 
                                 width="150"></a>
                         </span>
@@ -121,7 +121,7 @@
                         <span><a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank">
                             <img 
                                 class="img-circle"
-                                src="../img/gt-omscs-cs7641-a2.png"
+                                src="../img/gt-omscs-cs7641-a2.jpg"
                                 height="150" 
                                 width="150"></a>
                         </span>
