--- a/ai/artificial-intelligence.html
+++ b/ai/artificial-intelligence.html
@@ -117,6 +117,7 @@
                                 width="150"></a>
                         </span>
                     </div>
+                    <hr class="small">
                     <div class="col-lg-4 text-center">
                         <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank"><h4>RANDOM OPTIMIZATION</h4></a>
                         <p class="text-muted">CS7641: Machine Learning</p>
