--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <h4>
                                     <strong>Marketing Firm</strong>
                                 </h4>
-                                <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
+                                <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook.</p>
                                 <a href="/marketing/google-adwords-exam-help" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                 <h4>
                                     <strong>Artificial Intelligence</strong>
                                 </h4>
-                                <p>Program or be programmed. My journey at Georgia Tech to become a technical programmer in AI.</p>
+                                <p>Program or be programmed. My journey at Georgia Tech to become a programmer in AI.</p>
                                 <a href="ai/artificial-intelligence" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
