--- a/ai/artificial-intelligence.html
+++ b/ai/artificial-intelligence.html
@@ -102,13 +102,13 @@
     <section id="Project-1" class="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="col-lg-4 text-center">
+                <div class="col-sm-12 text-center">
+                    <div class="col-sm-4 text-center">
                         <a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank"><h4>SUPERVISED LEARNING</h4></a>
                         <p class="text-muted">CS7641: Machine Learning</p>
                         <p>I used 5 supervised learning algorithms using explore two interesting problems: the accuracy of letter recognition, and the relationship between demographics and adult income in the US. <a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank">View Project</a></p>
                     </div>
-                    <div class="col-lg-2 text-center">
+                    <div class="col-sm-2 text-center">
                         <span><a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank">
                             <img 
                                 class="img-circle"
@@ -118,12 +118,12 @@
                         </span>
                     </div>
                     <hr class="small">
-                    <div class="col-lg-4 text-center">
+                    <div class="col-sm-4 text-center">
                         <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank"><h4>RANDOM OPTIMIZATION</h4></a>
                         <p class="text-muted">CS7641: Machine Learning</p>
                         <p>Sometimes, the optimal solution of a problem requires computing every single possible combination. Random optimization aims to find <i>near-</i>optimal solutions with a fraction of the computational cost. <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank">View Project</a></p>
                     </div>
-                    <div class="col-lg-2 text-center">
+                    <div class="col-sm-2 text-center">
                         <span><a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank">
                             <img 
                                 class="img-circle"
