--- a/ai/artificial-intelligence.html
+++ b/ai/artificial-intelligence.html
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <div class="col-sm-6 text-center">
+                    <div class="col-lg-6 text-center">
                         <div class="col-sm-8 text-center">
                             <a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank"><h4>SUPERVISED LEARNING</h4></a>
                             <p class="text-muted">CS7641: Machine Learning</p>
@@ -120,7 +120,7 @@
                         </div>
                         <hr class="small">
                     </div>
-                    <div class="col-sm-6 text-center">
+                    <div class="col-lg-6 text-center">
                         <div class="col-sm-8 text-center">
                             <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank"><h4>RANDOM OPTIMIZATION</h4></a>
                             <p class="text-muted">CS7641: Machine Learning</p>
