--- a/ai/artificial-intelligence.html
+++ b/ai/artificial-intelligence.html
@@ -79,7 +79,7 @@
     <section id="body" class="services bg-primary">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-sm-12 text-center">
                     <h2>Why Artificial Intelligence?</h2>
                     <hr class="small">
                     <span><img 
@@ -88,7 +88,7 @@
                         width="250">
                         </span>
                     <h2 class="centered mb">Program or Be Programmed</h2>
-                    <div class="col-lg-6 col-lg-offset-3">
+                    <div class="col-sm-6 col-sm-offset-3">
                         <p>Artificial intelligence is changing the way we work, play - and ultimately - live. In his book, Douglas Rushkoff says "we are looking at a society increasingly dependent on machines, yet decreasingly capable of making or even using them effectively." Technology is moving fast, and only the ones that continue to learn are able to keep up, otherwise you're left behind. That's why I'm studying artificial intellligence at <strong>Georgia Tech.</strong> AI has the potential to make the lives of so many people better, and I want to join the mission to bring AI to the world.</p>
                     </div>
                 </div>
