--- a/marketing/google-adwords-exam-help.html
+++ b/marketing/google-adwords-exam-help.html
@@ -86,8 +86,8 @@
                         width="250">
                         </span>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <div class="col-lg-6 col-lg-offset-3">
+                <div class="col-sm-12 text-center">
+                    <div class="col-sm-6 col-sm-offset-3">
                         <p>Google AdWords helps boost your website traffic by advertising your business right when your audience is already engaged -  searching for or browsing similar content.</p>
                         <p>While I provide marketing consultation, I also want encourage you to equip yourself with SEO (Search Engine Optimization) or SEM (Search Engine Marketing) so you can make the most of it. The best way to develop yourself as a SEO expert is to first be a practitioner, and then get the Google AdWords certificate. It's a 120-minute exam, so you'll want to know what you're doing before you start studying. When you do start to prepare for the exam, I've compiled a list of practice questions with answers for you to refer to. Enjoy and good luck!
                     </div>
