--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                         <a class="btn btn-primary" href="/blog/2016/i-am-a-procrastinator">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
+            </div>
             <hr>
             <!-- /.row -->
 
