Update header in the blog section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section id="projects" class="services bg-primary">
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-md-8 col-md-offset-2">
                     <h2>Projects</h2>
                     <hr class="small">
                     <div class="row">
