Update marketing link

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     <strong>Marketing Firm</strong>
                                 </h4>
                                 <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook.</p>
-                                <a href="/marketing/google-adwords-exam-help" class="btn btn-light">Learn More</a>
+                                <a href="http://www.greyadv.com/" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-sm-4">
