Add GT A3 and A4, add ML lecture notes in docs

--- a/ai/artificial-intelligence.html
+++ b/ai/artificial-intelligence.html
@@ -99,17 +99,24 @@
     </section>
 
     <!-- Project -->
-    <section id="Project-1" class="about">
+    <section id="projects-ml" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
+                    <h2>Machine Learning Algorithms</h2>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- ML Assignment 1  -->
+            <div class="row">
+                <div class="col-sm-12 text-center">
                     <div class="col-sm-4 text-center col-sm-offset-3">
-                        <a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank"><h4>SUPERVISED LEARNING</h4></a>
+                        <a href="../docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1" target="_blank"><h4>SUPERVISED LEARNING</h4></a>
                         <p class="text-muted">CS7641: Machine Learning</p>
-                        <p>I used 5 supervised learning algorithms using explore the accuracy of letter recognition, and the relationship between demographics and adult income in the US. <a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank">View Project</a></p>
+                        <p>I used 5 supervised learning algorithms using explore the accuracy of letter recognition, and the relationship between demographics and adult income in the US. <a href="../docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1" target="_blank">View Project</a></p>
                     </div>
                     <div class="col-sm-2 text-center">
-                        <span><a href="../docs/gt-omscs-cs7641-a1.pdf" target="_blank">
+                        <span><a href="../docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1" target="_blank">
                             <img 
                                 class="img-circle"
                                 src="../img/gt-omscs-cs7641-a1.jpg"
@@ -120,15 +127,16 @@
                 </div>
             </div>
             <hr class="small">
+            <!-- ML Assignment 2  -->
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <div class="col-sm-4 text-center col-sm-offset-3">
-                        <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank"><h4>RANDOM OPTIMIZATION</h4></a>
+                        <a href="../docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2" target="_blank"><h4>RANDOM OPTIMIZATION</h4></a>
                         <p class="text-muted">CS7641: Machine Learning</p>
-                        <p>The optimal solution of a problem requires computing all possible combinations. Random optimization finds <i><strong>near-</strong></i>optimal solutions with a fraction of the time. <a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank">View Project</a></p>
+                        <p>The optimal solution of a problem requires computing all possible combinations. Random optimization finds <i><strong>near-</strong></i>optimal solutions with a fraction of the time. <a href="../docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2" target="_blank">View Project</a></p>
                     </div>                    
                     <div class="col-sm-2 text-center">
-                        <span><a href="../docs/gt-omscs-cs7641-a2.pdf" target="_blank">
+                        <span><a href="../docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2" target="_blank">
                             <img 
                                 class="img-circle"
                                 src="../img/gt-omscs-cs7641-a2.jpg"
@@ -138,7 +146,46 @@
                     </div>
                 </div>
             </div>
-            <!-- /.row -->
+            <hr class="small">
+            <!-- ML Assignment 3  -->
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <div class="col-sm-4 text-center col-sm-offset-3">
+                        <a href="../docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3" target="_blank"><h4>UNSUPERVISED LEARNING</h4></a>
+                        <p class="text-muted">CS7641: Machine Learning</p>
+                        <p>Clustering and feature transformation are particularly useful in the absence - and support - of <strong><i>a priori</i></strong> domain knowledge (such as instance classification). <a href="../docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3" target="_blank">View Project</a></p>
+                    </div>                    
+                    <div class="col-sm-2 text-center">
+                        <span><a href="../docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3" target="_blank">
+                            <img 
+                                class="img-circle"
+                                src="../img/gt-omscs-cs7641-a3.jpg"
+                                height="150" 
+                                width="150"></a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- ML Assignment 4  -->
+            <div class="row">
+                <div class="col-sm-12 text-center">
+                    <div class="col-sm-4 text-center col-sm-offset-3">
+                        <a href="../docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4" target="_blank"><h4>REINFORCEMENT LEARNING</h4></a>
+                        <p class="text-muted">CS7641: Machine Learning</p>
+                        <p>Many iterative interactions such as the famous Prisoner's Dilemma can be modelled as Markov Decision Processes to learn from each subsequent iteration. <a href="../docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4" target="_blank">View Project</a></p>
+                    </div>                    
+                    <div class="col-sm-2 text-center">
+                        <span><a href="../docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4" target="_blank">
+                            <img 
+                                class="img-circle"
+                                src="../img/gt-omscs-cs7641-a4.jpg"
+                                height="150" 
+                                width="150"></a>
+                        </span>
+                    </div>
+                </div>
+            </div>                        
         </div>
         <!-- /.container -->
     </section>
