--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <h2 class="centered mb">About Dudon</h2>
                     <div class="col-md-6 col-md-offset-3">
                         <p><b>Dudon Wai</b> studied engineering at the University of Waterloo and proceeded to move and work in the oil &amp; gas industry. Passionate about solving complex problems, Dudon executed on <b>$100M+</b> in projects over two years. After an unlikely reunion with a friend, Dudon jumped into web development and started <b>GreyADV</b> in late 2015. In his free time, Dudon seeks new food experiences and enjoys dance music with his girlfriend Deanne. He also supports local Calgary startups and loves meeting like-minded people. Grateful for an amazing community, Dudon makes sure to share what he has learned and pay it forward to other aspiring entrepreneurs.</p>
-                        <a href="docs/dudon-wai-resume.pdf" target="_blank" class="btn btn-primary">View Resume</a>
+                        <a href="docs/dudon-wai-resume.pdf?pdf=resume" target="_blank" class="btn btn-primary">View Resume</a>
                     </div>
                 </div>
             </div>
