--- a/index.html
+++ b/index.html
@@ -199,6 +199,64 @@
                         <br>
                         <p><i class="fa fa-flask fa-3x"></i>
                         </p>
+                        <p>Mar 5, 2017</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <br>
+                        <a href="/blog/2017/the-sacrifices-of-entrepreneurship">
+                            <img class="img-portfolio img-responsive" src="img/the-sacrifices-of-entrepreneurship.jpeg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4>
+                            <a href="/blog/2017/the-sacrifices-of-entrepreneurship">The Sacrifices of Entrepreneurship</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/the-sacrifices-of-entrepreneurship-b9a98cc9e22c">@dudonwai</a>
+                        </p>
+                        <p>Every day, I try to find at least three experiments I can do. Will a cold shower in the morning wake me up more than a warm one? Do I eat more in a day if I have a big breakfast or a small one? Do I focus at work better with music or without?</p>
+                        <a class="btn btn-primary" href="/blog/2017/the-sacrifices-of-entrepreneurship">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-sm-2 text-center">
+                        <br>
+                        <p><i class="fa fa-flask fa-3x"></i>
+                        </p>
+                        <p>Feb 2, 2017</p>
+                    </div>
+                    <div class="col-sm-4 text-center">
+                        <br>
+                        <a href="/blog/2017/there-and-back-again">
+                            <img class="img-portfolio img-responsive" src="img/there-and-back-again.jpeg" alt="">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4>
+                            <a href="/blog/2017/there-and-back-again">There And Back Again</a>
+                        </h4>
+                        <p>via <a href="https://medium.com/@dudonwai/there-and-back-again-b3facf3fabe0">@dudonwai</a>
+                        </p>
+                        <p>It’s official! I’m moving on from Shell to return to Toronto to begin a new chapter of my career and my life. It’s surreal to have grown up in Toronto, moved away for good (or, so I thought at the time), and to come back full-circle to Toronto ...</p>
+                        <a class="btn btn-primary" href="/blog/2017/there-and-back-again">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!-- /.row -->
+
+            <!-- Blog Post Row -->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <div class="col-sm-2 text-center">
+                        <br>
+                        <p><i class="fa fa-flask fa-3x"></i>
+                        </p>
                         <p>July 16, 2016</p>
                     </div>
                     <div class="col-sm-4 text-center">
@@ -240,7 +298,7 @@
                         <h4>
                             <a href="/blog/2016/meta-blog-1">Meta Blog #1</a>
                         </h4>
-                        <p>via <a href="https://medium.com/@dudonwai/meta-blog-1-58adaa94ed2e#.wrcee1p8p">@dudonwai</a>
+                        <p>via <a href="https://medium.com/@dudonwai/meta-blog-1-58adaa94ed2e">@dudonwai</a>
                         </p>
                         <p>Yes, this blog is going to be about blogging. I’ve never liked the idea of meta-blogging, as it feels uncreative. But I need to do this for me. And yes, it’s #1 because there may be a #2. I promise I won’t meta-blog often, but it’s as much for me, as it is for the reader as well.</p>
                         <a class="btn btn-primary" href="/blog/2016/meta-blog-1">Read More <i class="fa fa-angle-right"></i></a>
@@ -269,7 +327,7 @@
                         <h4>
                             <a href="/blog/2016/i-am-a-procrastinator">I Am A Procrastinator</a>
                         </h4>
-                        <p>via <a href="https://medium.com/@dudonwai/i-am-a-procrastinator-b0bb50a06ae8#.wso5nvx6u">@dudonwai</a>
+                        <p>via <a href="https://medium.com/@dudonwai/i-am-a-procrastinator-b0bb50a06ae8">@dudonwai</a>
                         </p>
                         <p>I’m a procrastinator, but I’m not lazy. Procrastination is the delay of doing something you should be doing. Laziness is lacking the effort to do something you have the ability to do. If you’re like me, you have a million things you want to do, but you don’t do most of them...</p>
                         <a class="btn btn-primary" href="/blog/2016/i-am-a-procrastinator">Read More <i class="fa fa-angle-right"></i></a>
@@ -298,7 +356,7 @@
                         <h4>
                             <a href="/blog/2016/no-marketing-budget">No Marketing Budget</a>
                         </h4>
-                        <p>via <a href="https://blog.greyadv.com/no-marketing-budget-a6721010fb11#.xyl5ln7sm">@dudonwai</a>
+                        <p>via <a href="https://blog.greyadv.com/no-marketing-budget-a6721010fb11">@dudonwai</a>
                         </p>
                         <p>It’s the start of 2016, and by now you have an idea of how much you can spend this year on attracting new customers and growing your business. In this brief post, I’ll discuss a few options you have for growing your business, at little to no cost!</p>
                         <a class="btn btn-primary" href="/blog/2016/no-marketing-budget">Read More <i class="fa fa-angle-right"></i></a>
@@ -327,7 +385,7 @@
                         <h4>
                             <a href="/blog/2016/8-reasons-you-need-a-website">8 Reasons You Need A Website</a>
                         </h4>
-                        <p>via <a href="https://medium.com/@dudonwai/meta-blog-1-58adaa94ed2e#.wrcee1p8p">@dudonwai</a>
+                        <p>via <a href="https://medium.com/@dudonwai/meta-blog-1-58adaa94ed2e#">@dudonwai</a>
                         </p>
                         <p>It’s easy to think that you DON’T NEED a website, or that your website is GOOD ENOUGH. No matter what size your business is, your website is your greatest tool for growing your business. Here’s 8 reasons your website needs to be GREAT.</p>
                         <a class="btn btn-primary" href="/blog/2016/8-reasons-you-need-a-website">Read More <i class="fa fa-angle-right"></i></a>
@@ -364,7 +422,7 @@
                             <a href="https://medium.com/@dudonwai" target="_blank"><i class="fa fa-medium fa-fw fa-3x"></i></a>
                         </li>                   
                     </ul>
-                    <p class="text-muted">Dudon Wai ~ 2016</p>
+                    <p class="text-muted">Dudon Wai ~ 2017</p>
                 </div>
             </div>
         </div>
