Add blogs from 2017

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="col-sm-2 text-center">
                         <br>
-                        <p><i class="fa fa-flask fa-3x"></i>
+                        <p><i class="fa fa-gift fa-3x"></i>
                         </p>
                         <p>Mar 5, 2017</p>
                     </div>
@@ -213,7 +213,7 @@
                         </h4>
                         <p>via <a href="https://medium.com/@dudonwai/the-sacrifices-of-entrepreneurship-b9a98cc9e22c">@dudonwai</a>
                         </p>
-                        <p>Every day, I try to find at least three experiments I can do. Will a cold shower in the morning wake me up more than a warm one? Do I eat more in a day if I have a big breakfast or a small one? Do I focus at work better with music or without?</p>
+                        <p>Very rarely have I ever said anything worth quoting, but the quote above comes from a candid conversation I had today with a friend about my recent career change. Most conversations I’ve had recently touch on the topic of...</p>
                         <a class="btn btn-primary" href="/blog/2017/the-sacrifices-of-entrepreneurship">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                 <div class="col-lg-10 col-lg-offset-1">
                     <div class="col-sm-2 text-center">
                         <br>
-                        <p><i class="fa fa-flask fa-3x"></i>
+                        <p><i class="fa fa-heart fa-3x"></i>
                         </p>
                         <p>Feb 2, 2017</p>
                     </div>
